--- a/honk-manage.conf
+++ b/honk-manage.conf
@@ -1,4 +1,4 @@
 datadir="$HOME/honk/$port"
-viewdir="$HOME/src/honk"
-rundir="$HOME/honk-run"
+viewdir="$HOME/honk-0.9.8"
+rundir="$HOME/allthingshonk"
 mkdir -p "$rundir"
