--- a/honk-manage.conf
+++ b/honk-manage.conf
@@ -1,4 +1,6 @@
+#!/bin/bash
 datadir="$HOME/honk/$port"
 viewdir="$HOME/honk-0.9.8"
 rundir="$HOME/allthingshonk"
+machine="gentoo"
 mkdir -p "$rundir"
