change datadir to mean ~/honk

--- a/honk-manage.conf
+++ b/honk-manage.conf
@@ -1,5 +1,5 @@
 #!/bin/bash
-datadir="$HOME/honk/$port"
+datadir="$HOME/honk"
 viewdir="$HOME/honk-0.9.8"
 rundir="$HOME/allthingshonk"
 machine="gentoo"
