--- a/honk-manage.conf
+++ b/honk-manage.conf
@@ -2,5 +2,5 @@
 datadir="$HOME/honk"
 viewdir="$HOME/honk-0.9.8"
 rundir="$HOME/allthingshonk"
-machine="gentoo"
+machine="bikalpa"
 mkdir -p "$rundir"
