--- a/honk-manage.conf
+++ b/honk-manage.conf
@@ -4,3 +4,8 @@ viewdir="$HOME/honk-0.9.8"
 rundir="$HOME/allthingshonk"
 machine="bikalpa"
 mkdir -p "$rundir"
+
+die(){
+    printf '%s\n' "$*" >&2
+    exit 1
+}
