--- a/honk-manage.conf
+++ b/honk-manage.conf
@@ -2,7 +2,8 @@
 datadir="$HOME/honk"
 viewdir="$HOME/honk-0.9.8"
 rundir="$HOME/allthingshonk"
-machine="bikalpa"
+allmachines=("gentoo" "nuc" "bikalpa")
+machine="gentoo"
 mkdir -p "$rundir"
 
 die(){
